[tool.poetry]
name = "sum-diff"
version = "0.1.0"
description = ""
authors = ["Takanori Ishikawa <ishikawa.takanori@abejainc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
sum-diff = "sum_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
