[tool.poetry]
name = "sum-diff"
version = "0.1.0"
description = ""
authors = ["Takanori Ishikawa <ishikawa.takanori@abejainc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.scripts]
sum-diff = "sum_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
